# uboat-sim

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/uboatsim/: __init__.py  main.py
src/uboatsim/sim/: entity.py  world.py
src/uboatsim/ui/: main_window.py  scene.py  view.py
src/uboatsim/ui/items/: overlays.py  ship_item.py  sub_item.py
src/uboatsim/ui/tools/: abstractdisc.py  attackdisc.py  utils.py
src/uboatsim/utils/: math.py  units.py
